--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,12 @@ p {
       text-align: center;
       font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   }
+      img {
+      max-width: 100%;
+      height: auto;
+  }
+    img [Attributes Style] {
+      width: 500px;
+      aspect-ratio: auto 500 / 191;
+      height: 191px;
+  }
