--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,7 +3,7 @@ p, ul {
     color: #000000;
     max-width: 30em;
     width: 100%;
-    text-align: left;
+    text-align: center;
     margin: 1em auto 1em auto;
     font-size: 3em;
     line-height: 1.3;
